fix: date alignment on small devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -135,7 +135,7 @@
         font-size: 0.65em;
     }
     .post-meta {
-
+        text-align: center
     }
 }
 
